package com.tp.jpa.model;

public interface Calculable {
  public void calcularTotal();
}
