package com.tp.jpa.model.enums;

public enum Estado {
  PENDIENTE,
  CONFIRMADO,
  TERMINADO,
  CANCELADO
}
