package com.tp.jpa.model.enums;

public enum FormaPago {
  TARJETA,
  TRANSFERENCIA,
  EFECTIVO
}
