package com.tp.jpa.model.enums;

public enum Rol {
  ADMIN,
  USUARIO
}
