@startuml Implementacion

skinparam classAttributeIconSize 0

abstract class Base {
    - id: Long
    - eliminado: Boolean
    - createdAt: LocalDateTime
}

interface Calculable {
    + calcularTotal(): void
}

class Usuario {
    - nombre: String
    - apellido: String
    - mail: String
    - celular: String
    - contrasenia: String
    - rol: Rol
    - pedidos: Set<Pedido>
    + addPedido(Pedido): void
    + toString(): String
}

class Categoria {
    - nombre: String
    - descripcion: String
    - productos: Set<Producto>
    + addProducto(Producto): void
}

class Producto {
    - nombre: String
    - precio: Double
    - descripcion: String
    - stock: int
    - imagen: String
    - disponible: Boolean
    - categoria: Categoria
    + setCategoria(Categoria): void
}

class Pedido {
    - fecha: LocalDate
    - estado: Estado
    - total: Double
    - formaPago: FormaPago
    - usuario: Usuario
    - detallePedidos: Set<DetallePedido>
    + setUsuario(Usuario): void
    + addDetallePedido(int, Producto): void
    + addDetallePedido(Producto, int): void
    + findDetallePedidoByProducto(Producto): DetallePedido
    + findeDetallePedidoByProducto(Producto): DetallePedido
    + deleteDetallePedidoByProducto(Producto): void
    + Pedido(Usuario)
    + Pedido(LocalDate, Estado, FormaPago, Usuario)
    + calcularTotal(): void
}

class DetallePedido {
    - cantidad: int
    - subtotal: Double
    - producto: Producto
}

class UsuarioDTO <<record>> {
    - id: Long
    - eliminado: Boolean
    - createdAt: LocalDateTime
    - nombre: String
    - apellido: String
    - mail: String
    - celular: String
    - ARG_DATE_TIME_FORMAT: DateTimeFormatter
    + from(Usuario): UsuarioDTO
    + toString(): String
    - formatCreatedAt(): String
}

enum FormaPago {
    TARJETA
    TRANSFERENCIA
    EFECTIVO
}

enum Rol {
    ADMIN
    USUARIO
}

enum Estado {
    PENDIENTE
    CONFIRMADO
    TERMINADO
    CANCELADO
}

Base <|-- Usuario
Base <|-- Categoria
Base <|-- Producto
Base <|-- Pedido
Base <|-- DetallePedido
Calculable <|.. Pedido
Usuario --> "1..m" Pedido
Pedido *-- "1..m" DetallePedido
DetallePedido "m" --> "1" Producto
Categoria o-- "1..m" Producto
UsuarioDTO ..> Usuario
@enduml
